forget password working

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -8,3 +8,9 @@
       max-width: 320px;
     }
   }
+
+  #forgotPassword {
+    color: grey;
+    text-decoration: underline;
+    text-align: center;
+  }
