--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,6 +1,7 @@
 @media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      padding: 20px 0;
+      padding-bottom: 60px;
     }
   
     .Login form {
@@ -10,7 +11,9 @@
   }
 
   #forgotPassword {
+    padding-top: 10px;
     color: grey;
     text-decoration: underline;
     text-align: center;
+    cursor: pointer;
   }
