--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -1,6 +1,7 @@
 @media all and (min-width: 480px) {
     .Signup {
-      padding: 60px 0;
+      padding: 20px 0;
+      padding-bottom: 60px;
     }
   
     .Signup form {
@@ -8,3 +9,7 @@
       max-width: 320px;
     }
   }
+#heading {
+  text-align: center;
+  align-self: center;
+}
