--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -7,3 +7,11 @@
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
   }
+
+#spacer {
+  margin-top: 30px;
+}
+
+.wrapper {
+  margin: 30px;
+}
